--- a/src/app/components/footer.module.css
+++ b/src/app/components/footer.module.css
@@ -7,7 +7,7 @@
   align-items: center;
 }
 .background {
-  background-color: #1f2727;
+  background-color: #333e4a8e;
 }
 @media screen and (max-width: 700px) {
   .copy {
