--- a/src/app/components/nav.module.css
+++ b/src/app/components/nav.module.css
@@ -4,7 +4,7 @@
   z-index: 2;
 }
 .background {
-  background-color: #3838388e;
+  background-color: #333e4a8e;
   backdrop-filter: blur(10px);
   margin: auto auto;
   width: 100%;
