--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -84,7 +84,7 @@
     font-size: 1.6rem;
   }
   .wrapper {
-    padding: 24px;
+    padding: 20px;
 
     width: 100%;
     border-radius: 0;
@@ -96,10 +96,10 @@
     padding-bottom: 24px;
   }
   .wrapperProject .subtext {
-    margin-left: 24px;
-    padding-top: 24px;
-    padding-right: 24px;
-    margin-bottom: 24px;
+    margin-left: 20px;
+    padding-top: 20px;
+    padding-right: 20px;
+    margin-bottom: 20px;
   }
   .aboutContainer {
     margin: 0 auto;
